backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 742710068961.dkr.ecr.ap-south-1.amazonaws.com/my-app:backend-REPLACE_TAG
        ports:
        - containerPort: 8080
