frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: three-tier
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 742710068961.dkr.ecr.ap-south-1.amazonaws.com/my-app:frontend-REPLACE_TAG
        ports:
        - containerPort: 80
